Updated the APIs
