# swagger.json
@@ -332,6 +332,140 @@
         }
       }
     },
+    "/hints/": {
+      "get": {
+        "tags": ["Hints"],
+        "summary": "Get hints from user's account",
+        "parameters": [
+          {
+            "name": "Authorization",
+            "in": "header",
+            "required": true,
+            "type": "string",
+            "description": "JWT token"
+          },
+          {
+            "name": "email",
+            "in": "query",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "email": { "type": "string" }
+              },
+              "required": ["email"]
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "hints Fetched successfully"
+          },
+          "400": {
+            "description": "Invalid data"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "404": {
+            "description": "User not found"
+          },
+          "500": {
+            "description": "Server error"
+          }
+        }
+      }
+    },
+    "/hints/add": {
+      "post": {
+        "tags": ["Hints"],
+        "summary": "Add hints to user's account",
+        "parameters": [
+          {
+            "name": "Authorization",
+            "in": "header",
+            "required": true,
+            "type": "string",
+            "description": "JWT token"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "email": { "type": "string" },
+                "hints": { "type": "number" }
+              },
+              "required": ["hints"]
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "hints added successfully"
+          },
+          "400": {
+            "description": "Invalid data"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "404": {
+            "description": "User not found"
+          },
+          "500": {
+            "description": "Server error"
+          }
+        }
+      }
+    },
+    "/hints/use": {
+      "put": {
+        "tags": ["Hints"],
+        "summary": "Use hints from user's account",
+        "parameters": [
+          {
+            "name": "Authorization",
+            "in": "header",
+            "required": true,
+            "type": "string",
+            "description": "JWT token"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "email": { "type": "string" },
+                "hints": { "type": "number" }
+              },
+              "required": ["hints"]
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "hints used successfully"
+          },
+          "400": {
+            "description": "Invalid data"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "404": {
+            "description": "User not found"
+          },
+          "500": {
+            "description": "Server error"
+          }
+        }
+      }
+    },
     "/levels/set": {
       "put": {
         "tags": ["Levels"],
@@ -653,7 +787,7 @@
     },
     "/daily/update-daily-challenge": {
       "post": {
-        "tags": ["Coins"],
+        "tags": ["Daily"],
         "summary": "Update Daily Challenge Stats",
         "parameters": [
           {
